[gd_scene load_steps=37 format=3 uid="uid://yp3kp2bj1o41"]

[ext_resource type="Script" path="res://jhon.gd" id="1_470vy"]
[ext_resource type="Texture2D" uid="uid://cbg2inv6pq2vi" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_idle_0.png" id="2_81jff"]
[ext_resource type="Texture2D" uid="uid://4ksgknvam8b8" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_idle_1.png" id="3_n5yyy"]
[ext_resource type="Texture2D" uid="uid://bb1cfa10207lu" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_idle_2.png" id="4_axvch"]
[ext_resource type="Texture2D" uid="uid://cqgehi53jggb2" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_idle_3.png" id="5_amqq7"]
[ext_resource type="Texture2D" uid="uid://siefakkcqic1" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_idle_4.png" id="6_sfb3y"]
[ext_resource type="Texture2D" uid="uid://ccckpgbw10mbj" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_idle_5.png" id="7_ju4c0"]
[ext_resource type="Texture2D" uid="uid://bh1sfmmvm0lun" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_idle_6.png" id="8_r3fi0"]
[ext_resource type="Texture2D" uid="uid://brp0j7ttif07y" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_idle_7.png" id="9_o8xda"]
[ext_resource type="Texture2D" uid="uid://l252esnxx08p" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_run_0.png" id="10_qb57x"]
[ext_resource type="Texture2D" uid="uid://gjceulkv047j" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_run_1.png" id="11_x582x"]
[ext_resource type="Texture2D" uid="uid://dapmm2dmthtka" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_run_2.png" id="12_8rqdj"]
[ext_resource type="Texture2D" uid="uid://cr831x61p8jrj" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_run_3.png" id="13_kyl73"]
[ext_resource type="Texture2D" uid="uid://itcf10lh1hnr" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_run_4.png" id="14_sa20u"]
[ext_resource type="Texture2D" uid="uid://4p6ia1npjchq" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_run_5.png" id="15_8mduq"]
[ext_resource type="Texture2D" uid="uid://b2vwykboycwj4" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_run_6.png" id="16_gb5kb"]
[ext_resource type="Texture2D" uid="uid://ciyrna2y234mf" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_run_7.png" id="17_1u276"]
[ext_resource type="Texture2D" uid="uid://bcgi2c84c4cxq" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_talk_0.png" id="18_10lmr"]
[ext_resource type="Texture2D" uid="uid://6um6hapfohry" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_talk_1.png" id="19_ivwub"]
[ext_resource type="Texture2D" uid="uid://v8g17h7p6n0" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_talk_2.png" id="20_g7j3o"]
[ext_resource type="Texture2D" uid="uid://c72dey7at8hg2" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_talk_3.png" id="21_oshpc"]
[ext_resource type="Texture2D" uid="uid://dd5lkb4jkd0s4" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_talk_4.png" id="22_6knqv"]
[ext_resource type="Texture2D" uid="uid://dr7bb3gphya7f" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_talk_5.png" id="23_71k33"]
[ext_resource type="Texture2D" uid="uid://bp338qx5obbjg" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_talk_6.png" id="24_stx2s"]
[ext_resource type="Texture2D" uid="uid://clg021teuvev0" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_walk_0.png" id="25_uqyho"]
[ext_resource type="Texture2D" uid="uid://dr6mpiywc33i" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_walk_1.png" id="26_bftq6"]
[ext_resource type="Texture2D" uid="uid://c0k23eqlgebwv" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_walk_2.png" id="27_qlsxb"]
[ext_resource type="Texture2D" uid="uid://bkm8yalk71csc" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_walk_3.png" id="28_npbpu"]
[ext_resource type="Texture2D" uid="uid://kyeac1r8wdqv" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_walk_4.png" id="29_yyeun"]
[ext_resource type="Texture2D" uid="uid://bwepmdjwqh1hb" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_walk_5.png" id="30_uygun"]
[ext_resource type="Texture2D" uid="uid://cxs75oxuk7ndr" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_walk_6.png" id="31_cd3fu"]
[ext_resource type="Texture2D" uid="uid://clu5v1hxi3ptt" path="res://assets/Male/Character 1/Clothes 2/Character1M_2_walk_7.png" id="32_xruic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jsl6"]
size = Vector2(6, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_eem0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_81jff")
}, {
"duration": 1.0,
"texture": ExtResource("3_n5yyy")
}, {
"duration": 1.0,
"texture": ExtResource("4_axvch")
}, {
"duration": 1.0,
"texture": ExtResource("5_amqq7")
}, {
"duration": 1.0,
"texture": ExtResource("6_sfb3y")
}, {
"duration": 1.0,
"texture": ExtResource("7_ju4c0")
}, {
"duration": 1.0,
"texture": ExtResource("8_r3fi0")
}, {
"duration": 1.0,
"texture": ExtResource("9_o8xda")
}],
"loop": true,
"name": &"mary_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_qb57x")
}, {
"duration": 1.0,
"texture": ExtResource("11_x582x")
}, {
"duration": 1.0,
"texture": ExtResource("12_8rqdj")
}, {
"duration": 1.0,
"texture": ExtResource("13_kyl73")
}, {
"duration": 1.0,
"texture": ExtResource("14_sa20u")
}, {
"duration": 1.0,
"texture": ExtResource("15_8mduq")
}, {
"duration": 1.0,
"texture": ExtResource("16_gb5kb")
}, {
"duration": 1.0,
"texture": ExtResource("17_1u276")
}],
"loop": true,
"name": &"mary_run",
"speed": 23.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_10lmr")
}, {
"duration": 1.0,
"texture": ExtResource("19_ivwub")
}, {
"duration": 1.0,
"texture": ExtResource("20_g7j3o")
}, {
"duration": 1.0,
"texture": ExtResource("21_oshpc")
}, {
"duration": 1.0,
"texture": ExtResource("22_6knqv")
}, {
"duration": 1.0,
"texture": ExtResource("23_71k33")
}, {
"duration": 1.0,
"texture": ExtResource("24_stx2s")
}],
"loop": true,
"name": &"mary_talk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_uqyho")
}, {
"duration": 1.0,
"texture": ExtResource("26_bftq6")
}, {
"duration": 1.0,
"texture": ExtResource("27_qlsxb")
}, {
"duration": 1.0,
"texture": ExtResource("28_npbpu")
}, {
"duration": 1.0,
"texture": ExtResource("29_yyeun")
}, {
"duration": 1.0,
"texture": ExtResource("30_uygun")
}, {
"duration": 1.0,
"texture": ExtResource("31_cd3fu")
}, {
"duration": 1.0,
"texture": ExtResource("32_xruic")
}],
"loop": true,
"name": &"mary_walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nmdds"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3a62i"]
size = Vector2(10, 13)

[node name="npc_jhon" type="Node2D"]

[node name="jhon" type="CharacterBody2D" parent="."]
script = ExtResource("1_470vy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="jhon"]
position = Vector2(-1, 9.5)
shape = SubResource("RectangleShape2D_1jsl6")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="jhon"]
texture_filter = 1
scale = Vector2(-0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_eem0m")
animation = &"mary_walk"

[node name="left" type="RayCast2D" parent="jhon"]
position = Vector2(-6, 0)
scale = Vector2(1, 15)
exclude_parent = false
target_position = Vector2(-30, 0)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="down" type="RayCast2D" parent="jhon"]
position = Vector2(1, 10)
scale = Vector2(15, 1)
exclude_parent = false
target_position = Vector2(0, 30)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="rigth" type="RayCast2D" parent="jhon"]
position = Vector2(8, 0)
scale = Vector2(1, 15)
target_position = Vector2(30, 0)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="up" type="RayCast2D" parent="jhon"]
position = Vector2(1, -10)
scale = Vector2(15, 1)
target_position = Vector2(0, -30)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="hit_box" type="Area2D" parent="jhon"]
collision_layer = 0
collision_mask = 8

[node name="area_guf" type="CollisionShape2D" parent="jhon/hit_box"]
position = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_nmdds")

[node name="area_npc" type="Area2D" parent="jhon"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="jhon/area_npc"]
position = Vector2(-11, -3.5)
shape = SubResource("RectangleShape2D_3a62i")

[node name="reposo" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="action" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="jhon/hit_box" to="jhon" method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="jhon/area_npc" to="jhon" method="_on_area_npc_area_entered"]
[connection signal="timeout" from="reposo" to="jhon" method="_on_reposo_timeout"]
[connection signal="timeout" from="action" to="jhon" method="_on_action_timeout"]
